@@ -1,0 +1,18 @@
+<html>
+<head>
+<title>500 Internal Server Error</title>
+</head>
+<body>
+<h1>500 Internal Server Error</h1>
+
+<p><%= value :exception %></p>
+
+</body>
+</html>
+
+<%#
+  Local Variables:
+  mode: HTML
+  indent-tabs-mode: nil
+  End:
+%>
